--- a/templates/components/listData.html
+++ b/templates/components/listData.html
@@ -1,18 +1,16 @@
 {% if datas %}
     {% if datas.rows %}
-        <p>{{ datas.rows }}</p>
         {% for data in datas.rows %}
         <div class="input-group mb-3">
 
             <div class="input-group-prepend">
             <div class="input-group-text">
                 <input type="hidden" name="done" value="off">
-                <!-- <input type="checkbox" onclick="redirect('/edit/{{data.id}}')" data-target="/edit/{{data.id}}" name="done"> -->
                 <input type="checkbox" class="delete" data-target="{{data.id}}" name="done">
             </div>
             </div>
 
-            <input id="todo-text" type="text" data-id="{{data.id}}" value="{{data.data}}" name="text" class="form-control todo-text">
+            <input id="todo-text" type="text" data-id="{{data.id}}" value="{{data.data}}" name="text" class="form-control todo-text" autocomplete="off">
 
             <div class="input-group-append" id="button-addon2">
             <button id="update" class="btn btn-primary update" type="submit" value="{{data.data}}">Update</button>
